# aknn

./: pyproject.toml
aknn/: micrograd-1.ipynb  micrograd-2.ipynb  micrograd-3.ipynb
