[tool.poetry]
name = "aknn"
version = "0.1.0"
description = ""
authors = ["Anup Sethuram <anup.sethuram@foxtel.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
micrograd = "^0.1.0"
jupyterlab = "^4.1.3"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
